<resources>
    <string name="app_name" translatable="false">Wiki</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="articles">Articles</string>
    <string name="articles_history">History</string>
    <string name="saved_articles">Saved articles:</string>
    <string name="empty_field_error">This field cannot me empty</string>
    <string name="incorrect_request_error">Incorrect request. Nothing found</string>
    <string name="internet_connection_error">No internet, check your connection</string>
    <string name="search_in_wikipedia">Search in Wikipedia</string>
    <string name="find_button">Search</string>
    <string name="news_found">In the News:</string>
    <string name="choose_language">Choose language (for articles and news):</string>

    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
        <item>Español</item>
        <item>Italiano</item>
        <item>français</item>
        <item>中文 (Chinese)</item>
    </string-array>
</resources>
